--- a/client/static/client/css/statistics.css
+++ b/client/static/client/css/statistics.css
@@ -60,7 +60,7 @@ body {
 
 .card img {
     margin-top: 35px;
-    width: 40px; /* ✅ Adjust image size */
+    width: 40px; 
     height: 40px;
 }
 
@@ -89,9 +89,9 @@ body {
 }
 
 .chart-box {
-    flex: 1; /* ✅ Ensures all charts take equal space */
-    max-width: 48%; /* ✅ Matches width with other charts */
-    height: 350px; /* ✅ Gives more space to the pie chart */
+    flex: 1; 
+    max-width: 48%; 
+    height: 350px; 
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -107,7 +107,7 @@ body {
 .chart-box canvas {
     width: 100% !important;
     height: 100% !important;
-    max-width: 280px; /* ✅ Keeps it from getting too large */
+    max-width: 280px; 
     max-height: 280px;
 }
 
@@ -119,19 +119,19 @@ body {
 }
 
 #completionChart {
-    width: 75% !important;  /* Makes it responsive */
+    width: 75% !important;  
     height: 75%;
-    max-width: 700px;  /* Limits maximum width */
-    border-radius: 10px;  /* Rounded corners */
+    max-width: 700px;  
+    border-radius: 10px;  
     padding: 10px;
     margin-right: 40px;
 }
 
 #completionTimeChart {
-    width: 75% !important;  /* Makes it responsive */
+    width: 75% !important; 
     height: 75%;
-    max-width: 700px;  /* Limits maximum width */
-    border-radius: 10px;  /* Rounded corners */
+    max-width: 700px;  
+    border-radius: 10px; 
     padding: 10px;
     margin-right: 40px;
 }
