--- a/client/static/client/css/Manage_Questionnaires.css
+++ b/client/static/client/css/Manage_Questionnaires.css
@@ -142,7 +142,7 @@ body {
 /* Top Bar Adjustments */
 .top-bar {
     display: flex;
-    justify-content: space-between; /* Spread title & button */
+    justify-content: space-between; 
     align-items: center;
     padding: 10px 20px;
 }
@@ -171,7 +171,7 @@ body {
 .center-text {
     text-align: center; 
     vertical-align: middle; 
-    font-weight: bold; /* Makes the number stand out */
+    font-weight: bold; 
 }
 /* Pagination Styles */
 .pagination {
