--- a/client/static/client/css/create_questionnaire.css
+++ b/client/static/client/css/create_questionnaire.css
@@ -118,7 +118,7 @@ body {
 /* Hover Effect */
 .question-type-select:hover {
     border-color: #888;
-    background-color: #fff; /* Brightens background to indicate interactivity */
+    background-color: #fff; 
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
 }
 
