--- a/client/static/client/css/navbar.css
+++ b/client/static/client/css/navbar.css
@@ -7,7 +7,7 @@ body {
 }
 
 .sidebar {
-    width: 60px;
+    width: 60px; 
     height: 100vh;
     background-color: #F24505;
     color: white;
@@ -86,6 +86,48 @@ body {
     border-radius: 8px;
 }
 
+
+.logout {
+    list-style: none;
+    position: absolute; 
+    bottom: 20px;
+    padding: 0;
+    left: 15px; 
+    margin-top: 250px;
+    padding-left: 0px;
+    opacity: 0; 
+    transition: opacity 0.3s ease-in-out;
+}
+
+.sidebar:hover .logout {
+    opacity: 1;
+}
+
+.logout a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    white-space: nowrap;
+}
+
+.logout a:hover {
+    width: 225px;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    white-space: nowrap;
+    opacity: 1;
+    padding: 15px 0px;
+    background-color: rgba(255, 255, 255, 0.15); 
+    border-radius: 8px;
+}
+
 .icon {
     font-size: 20px;
 }
@@ -96,10 +138,11 @@ body {
 }
 
 .content {
-    margin-left: 60px;
-    transition: margin-left 0.3s ease;
+    margin-left: 60px; 
+    transition: margin-left 0.3s ease; 
 }
 .sidebar:hover + .content {
+    margin-left: 250px; 
     margin-left: 250px; 
 }
 
@@ -136,24 +179,24 @@ body {
 }
 
 .sidebar .logoIcon {
-    width: 32px; /* Adjust the size as needed */
+    width: 32px; 
     height: 32px;
-    vertical-align: middle; /* Align the icon with the text */
-    margin-right: 8px; /* Add spacing between the icon and text */
+    vertical-align: middle; 
+    margin-right: 8px; 
     padding-left: 10px;
 }
 
 .sidebar .icon {
-    width: 20px; /* Adjust the size as needed */
+    width: 20px; 
     height: 20px;
-    vertical-align: middle; /* Align the icon with the text */
-    margin-right: 8px; /* Add spacing between the icon and text */
+    vertical-align: middle;
+    margin-right: 8px; 
 }
 
 .toggle {
     position: absolute;
     top: 50%;
-    right: -25px; /* Move it slightly outside the sidebar */
+    right: -25px; 
     transform: translateY(-50%);
     width: 30px;
     height: 30px;
@@ -168,14 +211,14 @@ body {
 
 /* Hide the toggle button when sidebar expands */
 .sidebar:hover .toggle {
-    right: -25px;
+    right: -25px; 
     opacity: 0;
 }
 
 
 /* Ensure toggle button is always visible */
 .sidebar:not(:hover) .toggle {
-    right: 10px; /* Keep it visible inside the collapsed sidebar */
+    right: 10px; 
     opacity: 1;
 }
 
