--- a/users/static/users/css/navbar.css
+++ b/users/static/users/css/navbar.css
@@ -7,21 +7,21 @@ body {
 }
 
 .sidebar {
-    width: 60px; /* Initially, a small width */
+    width: 60px; 
     height: 100vh;
     background-color: #F24505;
     color: white;
     position: fixed;
     left: 0;
     top: 0;
-    border-top-right-radius: 15px; /* Rounds the top-left corner */
-    border-bottom-right-radius: 15px; /* Rounds the bottom-left corner */
-    overflow: hidden; /* Hide content initially */
+    border-top-right-radius: 15px; 
+    border-bottom-right-radius: 15px; 
+    overflow: hidden; 
     transition: width 0.3s ease-in-out;
 }
 
 .sidebar:hover {
-    width: 250px; /* Expand when hovered */
+    width: 250px; 
 }
 
 .logo {
@@ -30,13 +30,13 @@ body {
     display: flex;
     align-items: center;
     padding-top: 20px;
-    gap: 10px; /* distance to logo */
-    opacity: 0; /* Hide menu items */
+    gap: 10px; 
+    opacity: 0; 
     transition: opacity 0.3s ease-in-out;
 }
 
 .sidebar:hover .logo {
-    opacity: 1; /* Show menu items on hover */
+    opacity: 1; 
 }
 
 .nav-links {
@@ -44,12 +44,12 @@ body {
     padding: 0;
     margin-top: 40px;
     padding-left: 15px;
-    opacity: 0; /* Hide menu items */
+    opacity: 0; 
     transition: opacity 0.3s ease-in-out;
 }
 
 .sidebar:hover .nav-links {
-    opacity: 1; /* Show menu items on hover */
+    opacity: 1; 
 }
 
 .nav-links li {
@@ -76,7 +76,7 @@ body {
 .nav-links a.active {
     font-weight: bold;
     background-color: #F24505;
-    border-radius: 8px; /* Soft rounded corners */
+    border-radius: 8px; 
 }
 
 
@@ -91,24 +91,24 @@ body {
     white-space: nowrap;
     opacity: 1;
     padding: 15px 0px;
-    background-color: rgba(255, 255, 255, 0.15); /* Light transparent white */
-    border-radius: 8px; /* Soft rounded corners */
+    background-color: rgba(255, 255, 255, 0.15); 
+    border-radius: 8px; 
 }
 
 .logout {
     list-style: none;
-    position: absolute;  /* Positions it relative to the sidebar */
+    position: absolute;  
     bottom: 20px;
     padding: 0;
-    left: 15px; /* Aligns it properly */
+    left: 15px; 
     margin-top: 250px;
     padding-left: 0px;
-    opacity: 0; /* Hide item */
+    opacity: 0; 
     transition: opacity 0.3s ease-in-out;
 }
 
 .sidebar:hover .logout {
-    opacity: 1; /* Show item on hover */
+    opacity: 1;
 }
 
 .logout a {
@@ -132,8 +132,8 @@ body {
     white-space: nowrap;
     opacity: 1;
     padding: 15px 0px;
-    background-color: rgba(255, 255, 255, 0.15); /* Light transparent white */
-    border-radius: 8px; /* Soft rounded corners */
+    background-color: rgba(255, 255, 255, 0.15); 
+    border-radius: 8px;
 }
 
 .icon {
@@ -146,11 +146,11 @@ body {
 }
 
 .content {
-    margin-left: 60px; /* Equal to the collapsed navbar width */
-    transition: margin-left 0.3s ease; /* Smooth transition for margin */
+    margin-left: 60px; 
+    transition: margin-left 0.3s ease;
 }
 .sidebar:hover + .content {
-    margin-left: 250px; /* Adjust margin for smaller screens */
+    margin-left: 250px;
 }
 
 .dashboard-container h1 {
@@ -185,26 +185,26 @@ body {
 }
 
 .sidebar .logoIcon {
-    width: 32px; /* Adjust the size as needed */
+    width: 32px; 
     height: 32px;
-    vertical-align: middle; /* Align the icon with the text */
-    margin-right: 8px; /* Add spacing between the icon and text */
+    vertical-align: middle; 
+    margin-right: 8px; 
     padding-left: 10px;
 }
 
 .sidebar .icon {
-    width: 20px; /* Adjust the size as needed */
+    width: 20px; 
     height: 20px;
-    vertical-align: middle; /* Align the icon with the text */
-    margin-right: 8px; /* Add spacing between the icon and text */
+    vertical-align: middle;
+    margin-right: 8px;
 }
 
 .toggle {
     position: absolute;
     top: 50%;
-    right: 5px; /* Places it towards the right */
-    transform: translateY(-50%); /* Centers it vertically */
-    width: 20px; /* Adjust size */
+    right: 5px; 
+    transform: translateY(-50%); 
+    width: 20px;
     height: 20px;
     display: flex;
     justify-content: center;
