Fix css, tests, and link progress calculations to client page.

--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -26,7 +26,7 @@
         <li>
             <a href="{% url 'userResponce' %}" class="{% if request.path == '/userResponce/' %}active{% endif %}">
                 <img src="{% static 'users/img/response.png' %}" alt="Response" class="icon">
-                <span>Your Response</span>
+                <span>Responses</span>
             </a>
         </li>        
         <li>
