--- a/users/static/users/css/userresponse_style.css
+++ b/users/static/users/css/userresponse_style.css
@@ -5,12 +5,12 @@ body {
     background-color: white;
     margin: 0;
     padding: 0;
-    display: flex; /* Align sidebar and content */
+    display: flex;
 }
 
 /* Full Page Content */
 .content {
-    flex-grow: 1; /* Takes up all available space */
+    flex-grow: 1; 
     padding: 30px;
 }
 
@@ -20,9 +20,7 @@ body {
     font-weight: bold;
     margin-bottom: 25px;
     text-align: left;
-    padding-left: 20px;
-    color: #FD5402;
-    border-left: 5px solid #FD5402;
+    color: #2b2320;
     padding-top: 5px;
     padding-bottom: 5px;
 }
