--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="content">
-        <h2 class="page-title">My Responses</h2>
+        <h2 class="page-title">Your Responses</h2>
         <link rel="stylesheet" href="{% static 'users/css/userresponse_style.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         {% for exercise in exercises %}
