--- a/client/templates/client/programs.html
+++ b/client/templates/client/programs.html
@@ -11,7 +11,14 @@
 
 {% block content %}
     <body class="container">
-        <h1>Available Programs</h1>
+        <div class="title-search-container">
+            <h1 class="page-title">Programs</h1>
+        
+            <form method="get" action="" class="search-bar-form">
+                <input type="text" name="q" class="search-bar-input" placeholder="Search programs..." value="{{ query|default:'' }}">
+                <button type="submit" class="search-bar-button">Search</button>
+            </form>
+        </div>
 
         <main class="program-grid">
             {% for program in programs %}
